added project gutenberg

--- a/nltk-session-3-updated.ipynb
+++ b/nltk-session-3-updated.ipynb
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 6,
    "metadata": {
     "collapsed": true
    },
@@ -35,6 +35,7 @@
    "source": [
     "import nltk\n",
     "import os\n",
+    "from urllib import urlopen\n",
     "% matplotlib inline"
    ]
   },
@@ -48,7 +49,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 7,
    "metadata": {
     "collapsed": false
    },
@@ -57,17 +58,20 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "mkdir: books: File exists\r\n"
+      "﻿The Project Gutenberg EBook of Cocoa and Chocolate, by Arthur W. Knapp\r\n",
+      "\r\n",
+      "This eBook is for the u\n"
      ]
     }
    ],
    "source": [
-    "! mkdir books"
+    "cocoa = urlopen('http://gutenberg.digitalfabulists.org/pg19073.txt').read()\n",
+    "print cocoa[:100]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 8,
    "metadata": {
     "collapsed": false
    },
@@ -76,23 +80,66 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[Errno 2] No such file or directory: 'books'\n",
-      "/Users/fionatweedie/NLTK/smog\n"
+      "Title: Cocoa and Chocolate\n",
+      "﻿The Project Gutenberg EBook of Cocoa and Chocolate, by Arthur W. Knapp\r\n",
+      "\r\n",
+      "This eBook is for the use of anyone anywhere at no cost and with\r\n",
+      "almost no restrictions whatsoever.  You may copy it, give i\n"
      ]
     }
    ],
    "source": [
-    "cd books"
+    "raw = unicode(cocoa, 'utf-8')\n",
+    "title = next(line for line in raw.splitlines() if line.startswith('Title'))\n",
+    "print title\n",
+    "print raw[:200]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "/Users/fionatweedie/NLTK/books\r\n"
+     ]
+    }
+   ],
+   "source": [
+    "!pwd"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "/Users/fionatweedie/NLTK/books/books\n",
+      "created file Title: Cocoa and Chocolate\n"
+     ]
+    }
+   ],
+   "source": [
+    "# save text to file\n",
+    "! mkdir books\n",
+    "%cd books\n",
+    "filetitle = title.replace(' ', '-')\n",
+    "bookfile = open(filetitle, 'w')\n",
+    "bookfile.write(raw.encode('utf-8'))\n",
+    "bookfile.close()\n",
+    "print 'created file', title"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -104,7 +151,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 11,
    "metadata": {
     "collapsed": true
    },
@@ -115,7 +162,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 12,
    "metadata": {
     "collapsed": true
    },
@@ -127,7 +174,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 13,
    "metadata": {
     "collapsed": true
    },
@@ -138,7 +185,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 14,
    "metadata": {
     "collapsed": false
    },
@@ -168,7 +215,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 15,
    "metadata": {
     "collapsed": false
    },
@@ -182,7 +229,7 @@
     }
    ],
    "source": [
-    "soup = BeautifulSoup(raw)\n",
+    "soup = BeautifulSoup(raw, 'html.parser')\n",
     "print type(soup)"
    ]
   },
@@ -195,7 +242,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 16,
    "metadata": {
     "collapsed": false
    },
@@ -218,7 +265,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 17,
    "metadata": {
     "collapsed": false
    },
@@ -258,7 +305,7 @@
     {
      "data": {
       "text/plain": [
-       "[u'Smog', u'is', u'a', u'type', u'of', u'air', u'pollutant']"
+       "[u'Smog', u'is', u'a', u'type', u'of', u'air', u'pollutant', u'.']"
       ]
      },
      "execution_count": 18,
@@ -333,7 +380,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 20,
    "metadata": {
     "collapsed": false
    },
@@ -342,20 +389,20 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "/Users/fionatweedie/NLTK/smog\n",
-      "/Users/fionatweedie/NLTK/smog\r\n"
+      "/Users/fionatweedie\n",
+      "/Users/fionatweedie/smog\n"
      ]
     }
    ],
    "source": [
+    "%cd\n",
     "! mkdir smog\n",
-    "#! pwd\n",
     "%cd smog"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 21,
    "metadata": {
     "collapsed": false
    },
@@ -368,11 +415,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "UnicodeEncodeError",
+     "evalue": "'ascii' codec can't encode character u'\\u2013' in position 2455: ordinal not in range(128)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mUnicodeEncodeError\u001b[0m                        Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-22-553551661c90>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0mtext_file\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mopen\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"Smog-text.txt\"\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m\"w\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 2\u001b[0;31m \u001b[0mtext_file\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mwrite\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mjoined_texts\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      3\u001b[0m \u001b[0mtext_file\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mclose\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mUnicodeEncodeError\u001b[0m: 'ascii' codec can't encode character u'\\u2013' in position 2455: ordinal not in range(128)"
+     ]
+    }
+   ],
    "source": [
     "text_file = open(\"Smog-text.txt\", \"w\")\n",
     "text_file.write(joined_texts)\n",
@@ -381,18 +440,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "u'ions \\u2013 such as from '"
+      ]
+     },
+     "execution_count": 23,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "joined_texts[2450:2470]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 24,
    "metadata": {
     "collapsed": false
    },
