Updated print statements to work in Python2 and Python3
This is the first step in converting to Python3.
It allows Python2 to still work while the transition is being made

--- a/nltk-session-1-updated-Python3.ipynb
+++ b/nltk-session-1-updated-Python3.ipynb
@@ -85,6 +85,7 @@
    },
    "outputs": [],
    "source": [
+    "from __future__ import print_function, division\n",
     "# clear output from download\n",
     "from IPython.display import display, clear_output\n",
     "# import: all the nltk basics\n",
@@ -617,7 +618,7 @@
     "\n",
     "string = 'user'\n",
     "if string == 'user':\n",
-    "    print 'Phew, fixed.'"
+    "    print('Phew, fixed.')"
    ]
   },
   {
@@ -650,8 +651,7 @@
    "outputs": [],
    "source": [
     "def welcomer(name):\n",
-    "    print 'Welcome, %s!' % name\n",
-    "# here '%s' tells Python to expect a string and how many strings to expect.  "
+    "    print('Welcome, %s!' % name)# here '%s' tells Python to expect a string and how many strings to expect.  "
    ]
   },
   {
@@ -923,8 +923,8 @@
    "source": [
     "fruits = ['banana', 'apple', 'mango']\n",
     "for fruit in fruits:        \n",
-    "    print 'Current fruit :', fruit\n",
-    "print 'Done!'"
+    "    print('Current fruit :', fruit)\n",
+    "    print('Done!')"
    ]
   },
   {
@@ -963,7 +963,7 @@
     "Library = [text1, text2, text3, text4, text5, text6, text7, text8, text9]\n",
     "for book in Library:\n",
     "    score = lexical_diversity(book)\n",
-    "    print book, score"
+    "    print(book, score)"
    ]
   },
   {
@@ -996,7 +996,7 @@
     }
    ],
    "source": [
-    "print text4.index('awaken')"
+    "print(text4.index('awaken'))"
    ]
   },
   {
@@ -1022,7 +1022,7 @@
     }
    ],
    "source": [
-    "print text4[158]"
+    "print(text4[158])"
    ]
   },
   {
@@ -1048,7 +1048,7 @@
     }
    ],
    "source": [
-    "print text5[16715:16735]"
+    "print(text5[16715:16735])"
    ]
   },
   {
@@ -1075,8 +1075,7 @@
     }
    ],
    "source": [
-    "print text2[:10]\n",
-    "print text4[145700:]"
+    "print(text2[:10])print(text4[145700:])"
    ]
   },
   {
@@ -1106,8 +1105,8 @@
    ],
    "source": [
     "sent = ['The', 'quick', 'brown', 'fox']\n",
-    "print sent[0]\n",
-    "print sent[2]"
+    "print(sent[0])\n",
+    "print(sent[2])"
    ]
   },
   {
@@ -1137,7 +1136,7 @@
    "source": [
     "sent[2] = 'furry'\n",
     "sent[3] = 'child'\n",
-    "print sent"
+    "print(sent)"
    ]
   },
   {
@@ -1207,7 +1206,7 @@
     }
    ],
    "source": [
-    "print clause"
+    "print(clause)"
    ]
   },
   {
@@ -1226,7 +1225,7 @@
     }
    ],
    "source": [
-    "print alphabetised"
+    "print(alphabetised)"
    ]
   },
   {
@@ -1384,7 +1383,7 @@
    "source": [
     "for book in Library:\n",
     "    words = common_words(book)\n",
-    "    print book, words "
+    "    print(book, words)"
    ]
   },
   {
@@ -1595,7 +1594,7 @@
     "longer = [word for word in sent2 if len(word) > 4]\n",
     "more = [word for word in sent2 if len(word) >= 4]\n",
     "exact = [word for word in sent2 if len(word) == 4]\n",
-    "print longer, more, exact"
+    "print(longer, more, exact)"
    ]
   },
   {
@@ -1619,7 +1618,7 @@
    "source": [
     "for word in sent2:\n",
     "    if len(word) > 4:\n",
-    "        print word"
+    "        print(word)"
    ]
   },
   {
@@ -1835,21 +1834,21 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 2",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "python2"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 2
+    "version": 3
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython2",
-   "version": "2.7.10"
+   "pygments_lexer": "ipython3",
+   "version": "3.4.3"
   }
  },
  "nbformat": 4,
