--- a/nltk-session-3-updated-Python3.ipynb
+++ b/nltk-session-3-updated-Python3.ipynb
@@ -33,6 +33,7 @@
    },
    "outputs": [],
    "source": [
+    "from __future__ import print_function, division\n",
     "import nltk\n",
     "import os\n",
     "from urllib import urlopen\n",
@@ -66,7 +67,7 @@
    ],
    "source": [
     "cocoa = urlopen('http://gutenberg.digitalfabulists.org/pg19073.txt').read()\n",
-    "print cocoa[:100]"
+    "print(cocoa[:100])"
    ]
   },
   {
@@ -91,8 +92,8 @@
    "source": [
     "raw = unicode(cocoa, 'utf-8')\n",
     "title = next(line for line in raw.splitlines() if line.startswith('Title'))\n",
-    "print title\n",
-    "print raw[:200]"
+    "print(title)\n",
+    "print(raw[:200])"
    ]
   },
   {
@@ -138,7 +139,7 @@
     "bookfile = open(filetitle, 'w')\n",
     "bookfile.write(raw.encode('utf-8'))\n",
     "bookfile.close()\n",
-    "print 'created file', title"
+    "print('created file', title)"
    ]
   },
   {
@@ -202,8 +203,8 @@
    ],
    "source": [
     "raw = urlopen(url).read()\n",
-    "print type(raw)\n",
-    "print raw[100:200]"
+    "print(type(raw))\n",
+    "print(raw[100:200])"
    ]
   },
   {
@@ -230,7 +231,7 @@
    ],
    "source": [
     "soup = BeautifulSoup(raw, 'html.parser')\n",
-    "print type(soup)"
+    "print(type(soup))"
    ]
   },
   {
@@ -260,7 +261,7 @@
     "for para in soup.find_all('p'):\n",
     "    text = para.text\n",
     "    texts.append(text)\n",
-    "print texts[:10]"
+    "print(texts[:10])"
    ]
   },
   {
@@ -284,8 +285,8 @@
     "regex = re.compile('\\[[0-9]*\\]')\n",
     "joined_texts = '\\n'.join(texts)\n",
     "joined_texts = re.sub(regex, '', joined_texts)\n",
-    "print type(joined_texts)\n",
-    "print joined_texts[:100]"
+    "print(type(joined_texts))\n",
+    "print(joined_texts[:100])"
    ]
   },
   {
@@ -537,21 +538,21 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 2",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "python2"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 2
+    "version": 3
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython2",
-   "version": "2.7.10"
+   "pygments_lexer": "ipython3",
+   "version": "3.4.3"
   }
  },
  "nbformat": 4,
